# lahacks26

./: .gitignore  :w  DEMO_SCRIPT.md  DEVPOST.md  PLAN.md  PRD.md  README.md  opencode.json
backend/: .env  .env.example  app.py  camera_ws_server.py  db.py  demo_camera_ws_server.py  faceAndGesture.py  main.py  mediapipe.py  patch_cosmpy.py  poseDetection.py  poseDetection2.py  pyproject.toml  test_pdf_generator.py  twilio_test.py  video_stream_template.py  vonage_test.py
backend/agent/: __init__.py  chat_agent.py  models.py  prompts.py  run_all.py  sms_agent.py  tools_registry.py
backend/agent/tools/: generate_patient_summary.py  supabase_tools.py  twilio_tools.py
backend/integrations/: openai_client.py  twilio_client.py
backend/routes/: agent_routes.py  events.py  handoff.py  report.py  rooms.py  shifts.py  sms_routes.py  video_routes.py
frontend/: README.md  create-test-patient.js  index.html  package-lock.json  package.json  tailwind.config.js  test-supabase-logs.js  vite.config.ts
frontend/drizzle/: 0000_sturdy_daimon_hellstrom.sql  0001_flawless_gunslinger.sql
frontend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
frontend/scripts/: add-more-emails.ts  alter-email-table.ts  create-email-table.ts  seed-emails.ts  seed.ts
frontend/src/: App.css  App.tsx  index.css  mockDashboardData.ts
frontend/src/cloudinary/: config.ts
frontend/src/components/: AppLayout.tsx  AppTopBar.tsx  DemoAlertBanner.tsx  VoiceBubble.tsx
frontend/src/db/: index.ts  supabase.ts
frontend/src/hooks/: useBackendCameraFeed.ts  useDemoCVMonitor.ts  (+3 more)
(+42 files in other folders)
