[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.29.0",
    "flask>=3.0",
    "flask-cors>=4.0",
    "uagents>=0.11",
    "openai>=1.0",
    "twilio>=9.0",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9.12",
    "opencv-python>=4.13.0.92",
    "mediapipe==0.10.14",
    "websockets>=13.0",
]
